--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "proxy": "http://localhost:3001/",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "immutability-helper": "^3.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.0",
