--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:3001/",
   "private": true,
   "dependencies": {
+    "@rails/ujs": "^6.0.0",
     "axios": "^0.19.0",
     "immutability-helper": "^3.0.1",
     "react": "^16.10.2",
