--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "cd client && yarn install && yarn build && cd ..",
+    "build": "cd client && npm install && npm build && cd ..",
     "deploy": "cp -a client/build/. public/",
-    "postinstall": "yarn build && yarn deploy && echo 'Client built!'"
+    "postinstall": "npm build && npm deploy && echo 'Client built!'"
   }
 }
