--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "scripts": {
     "build": "cd client && yarn install && yarn build && cd ..",
     "deploy": "cp -a client/build/. public/",
-    "postinstall": "yarn build && yarn deploy && echo 'Client built!'"
+    "heroku-postbuild": "webpack --config webpack.prod.js"
+  },
+  "dependencies": {
+    "@rails/webpacker": "^4.2.2"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.10.0"
   }
 }
